--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
-
-    <script src="./index2.js"></script>
+    <div id="root"></div>
+    <div id="root1"></div>
+    <script type="module" src="index.js"></script>
 </body>
 
 </html>
